Fixed container background in dark mode. (#1838)

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -2319,6 +2319,10 @@ input:focus-visible {
     background-color: #1f2936 !important;
   }
 
+  .jet-container {
+    background-color: #1f2936 !important;
+  }
+
   .nav-tabs .nav-item.show .nav-link,
   .nav-tabs .nav-link.active {
     background-color: #2f3c4c;
